circle db working
