# docs/swagger.json
@@ -1487,70 +1487,71 @@
             }
           }
         }
-      },
-      "post": {
-        "tags": [
-          "Circles"
-        ],
-        "description": "Create a circle",
-        "summary": "Create a circle",
-        "produces": [
-          "application/json"
-        ],
-        "consumes": [
-          "application/json"
-        ],
-        
-        "parameters": [
-          {
-            "in": "body",
-            "name": "circle",
-            "description": "The circle to create.",
-            "schema": {
-              "type": "object",
-              "required": [
-                "account_id",
-                "circle_symbol"
-              ],
-              "properties": {
-                "account_id": {
-                  "type": "string"
-                },
-                "circle_symbol": {
-                  "type": "string"
+      }
+    },
+      "/v1/circles/create_circle": {
+        "post": {
+          "tags": [
+            "Circles"
+          ],
+          "description": "Create a circle",
+          "summary": "Create a circle",
+          "produces": [
+            "application/json"
+          ],
+          "consumes": [
+            "application/json"
+          ],
+          "parameters": [
+            {
+              "in": "body",
+              "name": "circle",
+              "description": "The circle to create.",
+              "schema": {
+                "type": "object",
+                "required": [
+                  "account_id",
+                  "circle_symbol"
+                ],
+                "properties": {
+                  "account_id": {
+                    "type": "string"
+                  },
+                  "circle_symbol": {
+                    "type": "string"
+                  }
                 }
               }
             }
+          ],
+          "responses": {
+            "200": {
+              "description": "Success",
+              "schema": {
+                "$ref": "#/definitions/CircleResponse"
+              }
+            },
+            "400": {
+              "description": "Client error",
+              "schema": {
+                "$ref": "#/definitions/ErrorResponse"
+              }
+            },
+            "422": {
+              "description": "Client error",
+              "schema": {
+                "$ref": "#/definitions/ErrorResponse"
+              }
+            },
+            "500": {
+              "description": "Client error",
+              "schema": {
+                "$ref": "#/definitions/ErrorResponse"
+              }
+            }
           }
-        ],
-        "responses": {
-					"200": {
-						"description": "Success",
-						"schema": {
-							"$ref": "#/definitions/CircleResponse"
-						}
-					},
-					"400": {
-						"description": "Client error",
-						"schema": {
-							"$ref": "#/definitions/ErrorResponse"
-						}
-					},
-					"422": {
-						"description": "Client error",
-						"schema": {
-							"$ref": "#/definitions/ErrorResponse"
-						}
-					},
-					"500": {
-						"description": "Client error",
-						"schema": {
-							"$ref": "#/definitions/ErrorResponse"
-						}
-					}
-				}
-			}
-		},
+        }
+      },
     
 		"/v1/circles/{id}": {
 			"get": {
